--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <title> HTML and CSS Workshop!!! </title>
 </head>
 <body>
-  <h1>This is the body</h1>
+  <h1>This is THE website</h1>
+  <p>After navigating a complex series of tubes, you've ended up at the end of the World Wide Web. Congratz, HACKERMAN!</p>
 </body>
 
 
