--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 </head>
 <body>
   <h1>This is THE website</h1>
-  <p>After navigating a complex series of tubes, you've ended up at the end of the World Wide Web. Congratz, HACKERMAN! Here are a few things you will find on the website</p>
+  <p>After navigating a complex series of tubes, you've ended up at the end of the World Wide Web. Congratz, HACKERMAN! 
+    Here are a few things you will find on the website</p>
   <ul> 
       <li>Cat videos</li>
       <li>cat photos</li>
